Novos relatórios e ocutação do saldo

--- a/templates/index.html
+++ b/templates/index.html
@@ -179,8 +179,8 @@
                         </div>
 
                         <div class="col-md-4">
-                            <a href="{{ url_for('selecionar_distribuicao_lucro') }}" class="btn btn-outline-primary w-100">
-                                Relatório de Distribuição de Lucro
+                            <a href="{{ url_for('menu_relatorios') }}" class="btn btn-outline-primary w-100">
+                                Relatório
                             </a>
                         </div>
 
