--- a/templates/cadastrar_cliente.html
+++ b/templates/cadastrar_cliente.html
@@ -28,6 +28,12 @@
                 <label for="telefone" class="form-label">Telefone</label>
                 <input type="text" class="form-control" id="telefone" name="telefone" required>
             </div>
+            <div class="form-check mt-2">
+                <input class="form-check-input" type="checkbox" name="mostrar_saldo" id="mostrar_saldo" checked>
+                <label class="form-check-label" for="mostrar_saldo">
+                    Mostrar Saldo Acumulado no Relatório
+                </label>
+            </div>
             <div class="col-md-6">
                 <label for="endereco" class="form-label">Endereço</label>
                 <input type="text" class="form-control" id="endereco" name="endereco" required>
