--- a/templates/editar_cliente.html
+++ b/templates/editar_cliente.html
@@ -33,6 +33,13 @@
                     <label for="telefone" class="form-label">Telefone</label>
                     <input type="text" class="form-control" id="telefone" name="telefone" value="{{ cliente.telefone }}" required>
                 </div>
+                <div class="form-check mt-3">
+                    <input class="form-check-input" type="checkbox" name="mostrar_saldo" id="mostrar_saldo"
+                        {% if cliente.mostrar_saldo %}checked{% endif %}>
+                    <label class="form-check-label" for="mostrar_saldo">
+                        Mostrar Saldo Acumulado no Relatório
+                    </label>
+                </div>
                 <div class="col-md-6">
                     <label for="endereco" class="form-label">Endereço</label>
                     <input type="text" class="form-control" id="endereco" name="endereco" value="{{ cliente.endereco }}" required>
