--- a/templates/listar_clientes.html
+++ b/templates/listar_clientes.html
@@ -53,7 +53,7 @@
                     </td>
                     <td>{{ cliente.usina.nome }}</td>
                     <td>
-                        <a href="{{ url_for('editar_cliente', id=cliente.id) }}" class="btn btn-sm btn-outline-primary me-1" title="Editar">
+                        <a href="{{ url_for('editar_cliente', id=cliente.id, usina_id=usina_id_filtro) }}" class="btn btn-sm btn-outline-primary me-1" title="Editar">
                             <i class="bi bi-pencil-fill"></i>
                         </a>
                         <a href="{{ url_for('excluir_cliente', id=cliente.id) }}" class="btn btn-sm btn-outline-danger" title="Excluir"
