--- a/templates/email_fatura.html
+++ b/templates/email_fatura.html
@@ -7,7 +7,7 @@
     
 
     <p style="font-size: 16px; margin-bottom: 20px;">
-        Olá, <strong>{{ cliente.nome }}</strong>!
+        Olá, <strong>{{ cliente.nome }} - (ID {{ rateio.codigo_rateio }})</strong>!
     </p>
 
     <p style="font-size: 16px; margin-bottom: 20px;">
