--- a/templates/listar_usinas_previsao.html
+++ b/templates/listar_usinas_previsao.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usinas Cadastradas</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+{% extends 'base.html' %}
+
+{% block content %}
 <div class="container mt-5">
     <h2 class="mb-4 text-center">Usinas Cadastradas</h2>
     <table class="table table-bordered table-striped">
@@ -34,5 +28,4 @@
         <a href="/" class="btn btn-secondary">Voltar ao Início</a>
     </div>
 </div>
-</body>
-</html>
+{% endblock %}
