Attualização no relatório

--- a/templates/relatorio_prestacao_contas.html
+++ b/templates/relatorio_prestacao_contas.html
@@ -161,7 +161,12 @@
 
     </div>
     {% endif %}
-</div>
+    <div class="text-center mt-4">
+        <a href="{{ url_for('menu_relatorios') }}" class="btn btn-secondary">
+            <i class="bi bi-arrow-left-circle"></i> Voltar ao Menu de Relatórios
+        </a>
+    </div>
+
 
 <script>
     document.getElementById('acionista_id').addEventListener('change', function () {
