--- a/templates/menu_relatorios.html
+++ b/templates/menu_relatorios.html
@@ -26,6 +26,16 @@
             </div>
         </div>
 
+        <div class="col">
+            <div class="card shadow-sm h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Prestação de Contas</h5>
+                    <p class="card-text">Selecione um acionista, usina e período para gerar o relatório completo de prestação de contas.</p>
+                    <a href="{{ url_for('relatorio_prestacao') }}" class="btn btn-outline-primary">Acessar</a>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <div class="mt-4 text-center">
